reafactor and create: restructure project directories and create mock tests